--- a/client/style.css
+++ b/client/style.css
@@ -7,8 +7,21 @@ body {
 header {
 	text-align: center;
 	font-family: "Trebuchet MS", Helvetica, sans-serif;
-	text-shadow: 2px 2px 10px;
+	text-shadow: 2px 2px 8px;
 	font-size: 24px;
+}
+
+#timer {
+	background-color: black;
+	justify-content: center;
+	margin-top: 10px; margin-bottom: 10px;
+	margin-left: auto; margin-right: auto;
+	padding: 10px;
+	font-size: 25px;
+	color: white;
+	width: 150px;
+	border-radius: 4px;
+	text-align: center;
 }
 
 main {
